--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,8 @@
-<% provide(:title, 'Home') %>
+<div class="center hero-unit">
 <h1>Sample App</h1>
-<p>Blicky Black</p>
+<h2>
+This is the home page
+</h2>
+<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+<%= link_to image_tag("rails.png", alt:"Rails"), 'http://codylambert.com' %>
